--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="Tate Capra Profile"
-      content="Web site created using to show the profile of Tate."
+      content="Profile web site created using create-react-app"
     />
 
-    <title>Tate Profile</title>
+    <title>Tate Capra Profile</title>
   </head>
   <body>
+
     <div id="root"></div>
-  
+
   </body>
 </html>
